fix: Fixing misalignment on events list

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -231,3 +231,7 @@ a:hover{
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.form-group{
+    width: 100%;
+}
